--- a/css/responsive.css
+++ b/css/responsive.css
@@ -338,7 +338,7 @@
   }
 
   .career-map .basic-area {
-    gap: 28px;
+    gap: 50px;
   }
 
   .career-map__images {
@@ -531,6 +531,7 @@
   .green-career__thumb-right {
     height: 68px;
     width: max-content;
+    top: -30px;
   }
 
   .green-career__thumb-left {
@@ -539,5 +540,6 @@
 
   .green-career__images {
     padding-right: 0;
+    margin-top: 50px;
   }
 }
